--- a/FlashStash/Storyboards/Base.lproj/Main.storyboard
+++ b/FlashStash/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ahe-bE-fnf">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Home View Controller-->
+        <scene sceneID="Wyk-MX-jnd">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="hhO-CB-ito" customClass="HomeViewController" customModule="FlashStash" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OUH-ne-qxO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pIN-CA-zT4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Ytd-YE-9ph"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uBc-Lb-JJe">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="folderCell" id="dHO-g0-q5r">
+                                        <rect key="frame" x="0.0" y="16.5" width="171" height="117"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="171" height="117"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xcaFolder" translatesAutoresizingMaskIntoConstraints="NO" id="o0w-ng-E6x">
+                                                    <rect key="frame" x="0.0" y="0.0" width="171" height="117"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="o0w-ng-E6x" secondAttribute="bottom" id="3uu-Gt-iXp"/>
+                                            <constraint firstItem="o0w-ng-E6x" firstAttribute="leading" secondItem="dHO-g0-q5r" secondAttribute="leading" id="5Ca-Bg-dgs"/>
+                                            <constraint firstItem="o0w-ng-E6x" firstAttribute="top" secondItem="dHO-g0-q5r" secondAttribute="top" id="Hyt-aw-xxo"/>
+                                            <constraint firstAttribute="trailing" secondItem="o0w-ng-E6x" secondAttribute="trailing" id="q4h-Tu-rbW"/>
+                                        </constraints>
+                                        <size key="customSize" width="171" height="117"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EDX-6e-ZpH">
+                                <rect key="frame" x="0.0" y="170" width="375" height="433"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fqi-Pp-7GV">
+                                    <size key="itemSize" width="171" height="117"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="fileCell" id="YEi-8c-sC1">
+                                        <rect key="frame" x="0.0" y="0.0" width="171" height="117"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="171" height="117"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xcaSampleCards" translatesAutoresizingMaskIntoConstraints="NO" id="B5R-9S-cKc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="171" height="117"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="B5R-9S-cKc" secondAttribute="trailing" id="I9c-Bq-3IS"/>
+                                            <constraint firstItem="B5R-9S-cKc" firstAttribute="leading" secondItem="YEi-8c-sC1" secondAttribute="leading" id="RlT-kg-sVX"/>
+                                            <constraint firstAttribute="bottom" secondItem="B5R-9S-cKc" secondAttribute="bottom" id="sNK-4H-IKe"/>
+                                            <constraint firstItem="B5R-9S-cKc" firstAttribute="top" secondItem="YEi-8c-sC1" secondAttribute="top" id="t8d-9T-nXe"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WD4-jV-mCV">
+                                <rect key="frame" x="0.0" y="150" width="375" height="20"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Zm1-hB-yL3"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="WD4-jV-mCV" firstAttribute="top" secondItem="pIN-CA-zT4" secondAttribute="bottom" id="4VQ-gW-urB"/>
+                            <constraint firstItem="pIN-CA-zT4" firstAttribute="leading" secondItem="9I6-bO-giK" secondAttribute="leading" id="6Ga-Hz-FDa"/>
+                            <constraint firstItem="pIN-CA-zT4" firstAttribute="top" secondItem="9I6-bO-giK" secondAttribute="top" id="9hS-Qf-Bxk"/>
+                            <constraint firstItem="WD4-jV-mCV" firstAttribute="leading" secondItem="9I6-bO-giK" secondAttribute="leading" id="VRi-8t-bWI"/>
+                            <constraint firstItem="WD4-jV-mCV" firstAttribute="trailing" secondItem="9I6-bO-giK" secondAttribute="trailing" id="dWc-oe-9bk"/>
+                            <constraint firstItem="9I6-bO-giK" firstAttribute="bottom" secondItem="EDX-6e-ZpH" secondAttribute="bottom" id="dmm-PF-gBs"/>
+                            <constraint firstItem="EDX-6e-ZpH" firstAttribute="leading" secondItem="9I6-bO-giK" secondAttribute="leading" id="gdn-Sr-RBl"/>
+                            <constraint firstItem="9I6-bO-giK" firstAttribute="trailing" secondItem="EDX-6e-ZpH" secondAttribute="trailing" id="kXN-jr-k0a"/>
+                            <constraint firstItem="pIN-CA-zT4" firstAttribute="trailing" secondItem="9I6-bO-giK" secondAttribute="trailing" id="wbC-Mv-2Te"/>
+                            <constraint firstItem="EDX-6e-ZpH" firstAttribute="top" secondItem="WD4-jV-mCV" secondAttribute="bottom" id="wrp-xo-SDX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9I6-bO-giK"/>
                     </view>
+                    <navigationItem key="navigationItem" id="dpq-Mb-cwc"/>
+                    <connections>
+                        <outlet property="deckCollectionView" destination="EDX-6e-ZpH" id="Uy1-4s-dac"/>
+                        <outlet property="folderCollectionView" destination="pIN-CA-zT4" id="qhb-26-AWk"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ACu-dL-B9l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1028" y="88.605697151424295"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XSV-mi-j2H">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ahe-bE-fnf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="EZ0-ew-6PU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.14509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hhO-CB-ito" kind="relationship" relationship="rootViewController" id="v70-bJ-Igq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9XB-MJ-MUr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="88.799999999999997" y="88.605697151424295"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="xcaFolder" width="179" height="125"/>
+        <image name="xcaSampleCards" width="184" height="108"/>
+    </resources>
 </document>
